Add Swagger for REST API Documentation
